lib/parser/y.output

state 0
	$accept: .program $end 
	stmt_block: .    (2)

	.  reduce 2 (src line 41)

	program  goto 1
	stmt_block  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  stmt_block.    (1)
	stmt_block:  stmt_block.statement 

	IF  shift 7
	PRINT  shift 8
	IDENTIFIER  shift 10
	.  reduce 1 (src line 38)

	var  goto 9
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 6
	print_stmt  goto 5

state 3
	stmt_block:  stmt_block statement.    (3)

	.  reduce 3 (src line 43)


state 4
	statement:  if_stmt.    (4)
	statement:  if_stmt.SP 

	SP  shift 11
	.  reduce 4 (src line 46)


state 5
	statement:  print_stmt.    (6)
	statement:  print_stmt.SP 

	SP  shift 12
	.  reduce 6 (src line 49)


state 6
	statement:  assign_stmt.    (8)
	statement:  assign_stmt.SP 

	SP  shift 13
	.  reduce 8 (src line 51)


state 7
	if_stmt:  IF.condition THEN stmt_block ELSE stmt_block FI 
	if_stmt:  IF.condition THEN stmt_block FI 

	NOT  shift 17
	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 19
	.  error

	var  goto 20
	expr  goto 18
	condition  goto 14
	rel_condition  goto 15
	sub_condition  goto 16

state 8
	print_stmt:  PRINT.arg_list 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 25
	arg_list  goto 24

state 9
	assign_stmt:  var.'=' expr 

	'='  shift 27
	.  error


state 10
	var:  IDENTIFIER.    (25)

	.  reduce 25 (src line 100)


state 11
	statement:  if_stmt SP.    (5)

	.  reduce 5 (src line 48)


state 12
	statement:  print_stmt SP.    (7)

	.  reduce 7 (src line 50)


state 13
	statement:  assign_stmt SP.    (9)

	.  reduce 9 (src line 52)


state 14
	if_stmt:  IF condition.THEN stmt_block ELSE stmt_block FI 
	if_stmt:  IF condition.THEN stmt_block FI 

	THEN  shift 28
	.  error


state 15
	condition:  rel_condition.    (16)
	sub_condition:  rel_condition.    (23)

	AND  reduce 23 (src line 94)
	OR  reduce 23 (src line 94)
	.  reduce 16 (src line 81)


state 16
	condition:  sub_condition.AND sub_condition 
	condition:  sub_condition.OR sub_condition 

	AND  shift 29
	OR  shift 30
	.  error


state 17
	condition:  NOT.sub_condition 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 19
	.  error

	var  goto 20
	expr  goto 18
	rel_condition  goto 32
	sub_condition  goto 31

state 18
	rel_condition:  expr.EQ expr 
	rel_condition:  expr.'<' expr 
	rel_condition:  expr.'>' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	EQ  shift 33
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	'<'  shift 34
	'>'  shift 35
	.  error


state 19
	sub_condition:  '('.condition ')' 
	expr:  '('.expr ')' 

	NOT  shift 17
	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 19
	.  error

	var  goto 20
	expr  goto 41
	condition  goto 40
	rel_condition  goto 15
	sub_condition  goto 16

state 20
	expr:  var.    (26)

	.  reduce 26 (src line 112)


state 21
	expr:  NUMBER.    (27)

	.  reduce 27 (src line 113)


state 22
	expr:  STRING.    (28)

	.  reduce 28 (src line 115)


state 23
	expr:  CALL_LUA.'(' expr ',' arg_list ')' 

	'('  shift 42
	.  error


state 24
	print_stmt:  PRINT arg_list.    (13)
	arg_list:  arg_list.',' expr 

	','  shift 43
	.  reduce 13 (src line 71)


state 25
	arg_list:  expr.    (14)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 14 (src line 76)


state 26
	expr:  '('.expr ')' 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 44

state 27
	assign_stmt:  var '='.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 45

state 28
	if_stmt:  IF condition THEN.stmt_block ELSE stmt_block FI 
	if_stmt:  IF condition THEN.stmt_block FI 
	stmt_block: .    (2)

	.  reduce 2 (src line 41)

	stmt_block  goto 46

state 29
	condition:  sub_condition AND.sub_condition 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 19
	.  error

	var  goto 20
	expr  goto 18
	rel_condition  goto 32
	sub_condition  goto 47

state 30
	condition:  sub_condition OR.sub_condition 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 19
	.  error

	var  goto 20
	expr  goto 18
	rel_condition  goto 32
	sub_condition  goto 48

state 31
	condition:  NOT sub_condition.    (19)

	.  reduce 19 (src line 85)


state 32
	sub_condition:  rel_condition.    (23)

	.  reduce 23 (src line 94)


state 33
	rel_condition:  expr EQ.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 49

state 34
	rel_condition:  expr '<'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 50

state 35
	rel_condition:  expr '>'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 51

state 36
	expr:  expr '+'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 52

state 37
	expr:  expr '-'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 53

state 38
	expr:  expr '*'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 54

state 39
	expr:  expr '/'.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 55

state 40
	sub_condition:  '(' condition.')' 

	')'  shift 56
	.  error


state 41
	rel_condition:  expr.EQ expr 
	rel_condition:  expr.'<' expr 
	rel_condition:  expr.'>' expr 
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	EQ  shift 33
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	'<'  shift 34
	'>'  shift 35
	')'  shift 57
	.  error


state 42
	expr:  CALL_LUA '('.expr ',' arg_list ')' 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 58

state 43
	arg_list:  arg_list ','.expr 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 59

state 44
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	')'  shift 57
	.  error


state 45
	assign_stmt:  var '=' expr.    (12)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 12 (src line 66)


state 46
	stmt_block:  stmt_block.statement 
	if_stmt:  IF condition THEN stmt_block.ELSE stmt_block FI 
	if_stmt:  IF condition THEN stmt_block.FI 

	IF  shift 7
	ELSE  shift 60
	FI  shift 61
	PRINT  shift 8
	IDENTIFIER  shift 10
	.  error

	var  goto 9
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 6
	print_stmt  goto 5

state 47
	condition:  sub_condition AND sub_condition.    (17)

	.  reduce 17 (src line 83)


state 48
	condition:  sub_condition OR sub_condition.    (18)

	.  reduce 18 (src line 84)


state 49
	rel_condition:  expr EQ expr.    (20)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 20 (src line 88)


state 50
	rel_condition:  expr '<' expr.    (21)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 21 (src line 90)


state 51
	rel_condition:  expr '>' expr.    (22)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 22 (src line 91)


state 52
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (30)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'*'  shift 38
	'/'  shift 39
	.  reduce 30 (src line 117)


state 53
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (31)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'*'  shift 38
	'/'  shift 39
	.  reduce 31 (src line 118)


state 54
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (32)
	expr:  expr.'/' expr 

	.  reduce 32 (src line 119)


state 55
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (33)

	.  reduce 33 (src line 120)


state 56
	sub_condition:  '(' condition ')'.    (24)

	.  reduce 24 (src line 96)


state 57
	expr:  '(' expr ')'.    (29)

	.  reduce 29 (src line 116)


state 58
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  CALL_LUA '(' expr.',' arg_list ')' 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	','  shift 62
	.  error


state 59
	arg_list:  arg_list ',' expr.    (15)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  reduce 15 (src line 78)


state 60
	if_stmt:  IF condition THEN stmt_block ELSE.stmt_block FI 
	stmt_block: .    (2)

	.  reduce 2 (src line 41)

	stmt_block  goto 63

state 61
	if_stmt:  IF condition THEN stmt_block FI.    (11)

	.  reduce 11 (src line 63)


state 62
	expr:  CALL_LUA '(' expr ','.arg_list ')' 

	CALL_LUA  shift 23
	NUMBER  shift 21
	IDENTIFIER  shift 10
	STRING  shift 22
	'('  shift 26
	.  error

	var  goto 20
	expr  goto 25
	arg_list  goto 64

state 63
	stmt_block:  stmt_block.statement 
	if_stmt:  IF condition THEN stmt_block ELSE stmt_block.FI 

	IF  shift 7
	FI  shift 65
	PRINT  shift 8
	IDENTIFIER  shift 10
	.  error

	var  goto 9
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 6
	print_stmt  goto 5

state 64
	arg_list:  arg_list.',' expr 
	expr:  CALL_LUA '(' expr ',' arg_list.')' 

	','  shift 43
	')'  shift 66
	.  error


state 65
	if_stmt:  IF condition THEN stmt_block ELSE stmt_block FI.    (10)

	.  reduce 10 (src line 61)


state 66
	expr:  CALL_LUA '(' expr ',' arg_list ')'.    (34)

	.  reduce 34 (src line 122)


27 terminals, 13 nonterminals
35 grammar rules, 67/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 67/120000
64 extra closures
169 shift entries, 3 exceptions
38 goto entries
31 entries saved by goto default
Optimizer space used: output 115/120000
115 table entries, 6 zero
maximum spread: 27, maximum offset: 63
